<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="player_1_name">Enter Player 1 Name</string>
    <string name="player_2_name">Enter Player 2 Name</string>
    <string name="welcome">Welcome to Tic Tac Toe</string>
    <string name="start_game">Start Game</string>
    <string name="congrats_username">Congrats UserName</string>
    <string name="play_again">Play Again</string>
    <string name="quit">Quit</string>
    <string name="loading">Loading....</string>
</resources>