<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gameGrid"
        android:layout_width="377dp"
        android:layout_height="353dp"
        android:layout_margin="16dp"
        app:columnCount="3"
        app:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841">

        <FrameLayout
            android:layout_width="121dp"
            android:layout_height="104dp"
            app:layout_column="0"
            app:layout_row="0">

            <ImageView
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_top_row"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="105dp"
            app:layout_column="1"
            app:layout_row="0">
            <ImageView
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_top_row"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="127dp"
            android:layout_height="106dp"
            app:layout_column="2"
            app:layout_row="0">

            <ImageView
                android:id="@+id/button3"
                android:layout_width="129dp"
                android:layout_height="match_parent"
                android:background="@drawable/border_top_row"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="121dp"
            android:layout_height="123dp"
            app:layout_column="0"
            app:layout_row="1">
            <ImageView
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_inner"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="123dp"
            app:layout_column="1"
            app:layout_row="1">
            <ImageView
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_inner"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="126dp"
            android:layout_height="124dp"
            app:layout_column="2"
            app:layout_row="1">
            <ImageView
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_inner"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="122dp"
            android:layout_height="123dp"
            app:layout_column="0"
            app:layout_row="2">
            <ImageView
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_left_column"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="123dp"
            app:layout_column="1"
            app:layout_row="2">
            <ImageView
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_left_column"
                android:scaleType="centerCrop" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="124dp"
            android:layout_height="123dp"
            app:layout_column="2"
            app:layout_row="2">
            <ImageView
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_left_column"
                android:scaleType="centerCrop" />
        </FrameLayout>
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/endGameLayout"
        android:layout_width="308dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148">

        <TextView
            android:id="@+id/congratsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/congrats_username"
            android:textColor="@color/red_200"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/playAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
